<resources>

    <!-- Universal -->
    <string name="app_name">Otter Airways</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="success">Successfully </string>
    <string name="fail">Failed to </string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="login">Login</string>
    <string name="debug">Otter</string>

    <!-- Main -->
    <string name="create_account">Create Account</string>
    <string name="reserve_seat">Reserve Seat</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="manage_system">Manage System</string>

    <!-- Create Account -->
    <string name="create_account_format">^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*[!@#$%^&amp;*]).*$</string>
    <string name="create_account_requires"> must contain at least one lowercase letter, one uppercase letter, one number and one special character.</string>
    <string name="create_account_exists">Username already exists.</string>

    <!-- Reserve Seat -->
    <string name="reserve_seat_search">Reserve Seat</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="no_tickets">Number of Tickets</string>
    <string-array name="locations">
        <item>Monterey</item>
        <item>Seattle</item>
        <item>Los Angeles</item>
    </string-array>
    <string-array name="tickets">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>
